--- a/initial_notebook.ipynb
+++ b/initial_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,25 +10,16 @@
     "import cv2\n",
     "import random\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.datasets import fetch_lfw_pairs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-01-01 23:45:39.644231: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-01-01 23:45:39.802839: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-01 23:45:40.517486: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Model\n",
@@ -37,27 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data Folder already exists\n",
-      "data/anchor Folder already exists\n",
-      "data/positive Folder already exists\n",
-      "data/negative Folder already exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "if not os.path.exists('data'):\n",
     "    os.makedirs('data')\n",
     "else:\n",
-    "    print('Data Folder already exists')\n",
+    "    print('data Folder already exists')\n",
     "\n",
     "\n",
     "\n",
@@ -68,18 +46,6 @@
     "        os.makedirs(folder)\n",
     "    else:\n",
     "        print(f'{folder} Folder already exists')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Avoid OOM errors by setting GPU Memory Consumption Growth\n",
-    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
-    "for gpu in gpus: \n",
-    "    tf.config.experimental.set_memory_growth(gpu, True)"
    ]
   },
   {
@@ -120,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
